[gd_scene load_steps=9 format=3 uid="uid://cowyw3imwqrte"]

[ext_resource type="Script" path="res://systems/ui/game_over_screen.gd" id="1_gllgb"]
[ext_resource type="Theme" uid="uid://d12enup0x00h8" path="res://assets/ui/fonts/placeholder_theme.tres" id="2_0dbnf"]
[ext_resource type="Texture2D" uid="uid://clotsnwomvrm8" path="res://assets/sprites/cards/star.png" id="2_h6kti"]
[ext_resource type="Script" path="res://systems/ui/visible_for_feature.gd" id="2_ttak2"]
[ext_resource type="PackedScene" uid="uid://jn77ec80jhq5" path="res://utils/anti_pause_node.tscn" id="4_rgtd4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j67a8"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ttwj1"]
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_1eqlr"]
font_size = 64

[node name="GameWonScreen" type="CanvasLayer"]
layer = 2
script = ExtResource("1_gllgb")
main_menu_scene = "res://systems/ui/main_menu.tscn"

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_0dbnf")
theme_override_styles/panel = SubResource("StyleBoxFlat_j67a8")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -580.0
offset_right = 210.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_h6kti")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 75.0
offset_bottom = 250.0
grow_horizontal = 2
text = "You won!"
label_settings = SubResource("LabelSettings_ttwj1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 75.0
offset_bottom = 450.0
grow_horizontal = 2
text = "fucking amazing!"
label_settings = SubResource("LabelSettings_1eqlr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_quit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = -92.0
offset_right = -128.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Time to quit
(quit)"

[node name="hide-for-web" type="Node" parent="Panel/btn_quit"]
script = ExtResource("2_ttak2")
show_or_hide = 0

[node name="btn_restart" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 128.0
offset_right = -64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 64
text = "Let's suffer again
(restart)"

[node name="btn_main_menu" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 306.0
offset_right = -64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Go Back (Main Menu)"

[node name="hide-for-web" type="Node" parent="Panel/btn_main_menu"]
script = ExtResource("2_ttak2")
show_or_hide = 0

[node name="AntiPauseNode" parent="." instance=ExtResource("4_rgtd4")]

[connection signal="button_down" from="Panel/btn_quit" to="." method="quit"]
[connection signal="button_down" from="Panel/btn_restart" to="." method="restart"]
[connection signal="button_down" from="Panel/btn_main_menu" to="." method="_on_btn_main_menu_button_down"]
